<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/nutri_gray_light"
    tools:context=".ui.specialists.SpecialistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_specialist_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specialists_title"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_specialist_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/specialists_subtitle"
            android:textColor="@color/nutri_gray_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_specialist_title" />

        <LinearLayout
            android:id="@+id/layout_specialist_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/tv_specialist_subtitle">

            <include android:id="@+id/specialist_1" layout="@layout/item_specialist" />
            <include android:id="@+id/specialist_2" layout="@layout/item_specialist" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_my_appointments_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/specialists_my_appointments"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_specialist_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_appointments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_my_appointments_title"
            tools:listitem="@layout/item_appointment"
            tools:itemCount="1"/>

        <TextView
            android:id="@+id/tv_no_appointments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/specialists_no_appointments"
            android:textColor="@color/nutri_gray_text"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_my_appointments_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>